--- a/packages/in_app_purchase/in_app_purchase/pubspec.yaml
+++ b/packages/in_app_purchase/in_app_purchase/pubspec.yaml
@@ -15,6 +15,8 @@ flutter:
         default_package: in_app_purchase_android
       ios:
         default_package: in_app_purchase_storekit
+      macos:
+        default_package: in_app_purchase_storekit
 
 dependencies:
   flutter:
